// Copyright 2019 Walmart Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

message Message {
    // Type of the message for which the bytes indicate
    enum MessageType {
        TYPE_UNKNOWN = 0;
        PROPOSAL_SUBMIT = 1;
        PROPOSAL_VOTE = 2;
        PROPOSAL_ACCEPT = 3;
        PROPOSAL_REJECT = 4;
        PROPOSAL_READY = 5;
        CIRCUIT_CREATED = 6;
        CIRCUIT_PAYLOAD = 7;
    }
    // Message type
    MessageType type = 1;
    // Message contents
    bytes message = 2;
}

message ProposalSubmit {
    string requester = 1;
    string requester_node_id = 2;
    string circuit_id = 3;
}

message ProposalVote {
    string voter = 1;
    string voter_node_id = 2;
    string circuit_id = 3;
}

message ProposalAccept {
    string voter = 1;
    string voter_node_id = 2;
    string circuit_id = 3;
}

message ProposalReject {
    string voter = 1;
    string voter_node_id = 2;
    string circuit_id = 3;
}

message ProposalReady {
    string requester = 1;
    string requester_node_id = 2;
    string circuit_id = 3;
}

message CircuitCreated {
    string requester = 1;
    string requester_node_id = 2;
    string circuit_id = 3;
}

message CircuitPayload {
    string requester = 1;
    string requester_node_id = 2;
    string circuit_id = 3;
    bytes data = 4;
}
